updated class content

--- a/class/introduction/students_class_warm_up_2020-10-16.ipynb
+++ b/class/introduction/students_class_warm_up_2020-10-16.ipynb
@@ -1965,7 +1965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1973,6 +1973,132 @@
     "\n",
     "def split_title_and_name(person):\n",
     "    return person.split()[0] + ' ' + person.split()[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dr. Brooks\n",
+      "Dr. Collins-Thompson\n",
+      "Dr. Vydiswaran\n",
+      "Dr. Romero\n"
+     ]
+    }
+   ],
+   "source": [
+    "for person in people:\n",
+    "    print(split_title_and_name(person))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Dr. Brooks', 'Dr. Collins-Thompson', 'Dr. Vydiswaran', 'Dr. Romero']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(map(split_title_and_name, people))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<map at 0x1e00ee880c8>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "map(split_title_and_name, people)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dr. Brooks\n",
+      "Dr. Collins-Thompson\n",
+      "Dr. Vydiswaran\n",
+      "Dr. Romero\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in map(split_title_and_name, people):\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = map(split_title_and_name, people)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "people.append('Prof. Markus')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Dr. Brooks',\n",
+       " 'Dr. Collins-Thompson',\n",
+       " 'Dr. Vydiswaran',\n",
+       " 'Dr. Romero',\n",
+       " 'Prof. Markus']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l_split = lambda p: p.split()[0] + ' ' + p.split()[-1]\n",
+    "map_function = map(l_split, people)\n",
+    "list(map_function)"
    ]
   },
   {
@@ -2004,7 +2130,36 @@
     "            lst.append(i*j)\n",
     "    return lst\n",
     "\n",
-    "times_tables() == [???]"
+    "times_tables() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+       " [0, 2, 4, 6, 8, 10, 12, 14, 16, 18],\n",
+       " [0, 3, 6, 9, 12, 15, 18, 21, 24, 27],\n",
+       " [0, 4, 8, 12, 16, 20, 24, 28, 32, 36],\n",
+       " [0, 5, 10, 15, 20, 25, 30, 35, 40, 45],\n",
+       " [0, 6, 12, 18, 24, 30, 36, 42, 48, 54],\n",
+       " [0, 7, 14, 21, 28, 35, 42, 49, 56, 63],\n",
+       " [0, 8, 16, 24, 32, 40, 48, 56, 64, 72],\n",
+       " [0, 9, 18, 27, 36, 45, 54, 63, 72, 81]]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[[x*y for x in range(10)] for y in range(10)]"
    ]
   },
   {
