--- a/class/pandas/01_introduction_pandas.ipynb
+++ b/class/pandas/01_introduction_pandas.ipynb
@@ -100,7 +100,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bacteria = pd.Series([632, 1638, 569, 115], \n",
+    "    index=['Firmicutes', 'Proteobacteria', 'Actinobacteria', 'Bacteroidetes'])\n",
+    "\n",
+    "bacteria"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -214,7 +219,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bacteria_dict = {'Firmicutes': 632, 'Proteobacteria': 1638, 'Actinobacteria': 569,\n",
+    "                 'Bacteroidetes': 115}\n",
+    "pd.Series(bacteria_dict)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -230,7 +239,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bacteria2 = pd.Series(bacteria_dict, \n",
+    "                      index=['b','Firmicutes',\n",
+    "                             'Proteobacteria','Actinobacteria'])\n",
+    "bacteria2"
+   ]
   },
   {
    "cell_type": "code",
@@ -276,7 +290,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data = pd.DataFrame({'value':[632, 1638, 569, 115, 433, 1130, 754, 555],\n",
+    "                     'patient':[1, 1, 1, 1, 2, 2, 2, 2],\n",
+    "                     'phylum':['Firmicutes', 'Proteobacteria', 'Actinobacteria', \n",
+    "    'Bacteroidetes', 'Firmicutes', 'Proteobacteria', 'Actinobacteria', 'Bacteroidetes']})\n",
+    "data"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -609,7 +629,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "month = ['Jan','Feb','Mar','Apr','Mai', 'Jun','Jul', 'Aug'] "
+   ]
   },
   {
    "cell_type": "code",
