--- a/class/pandas/01_introduction_pandas.ipynb
+++ b/class/pandas/01_introduction_pandas.ipynb
@@ -448,7 +448,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data = pd.DataFrame([{'patient': 1, 'phylum': 'Firmicutes', 'value': 632},\n",
+    "                    {'patient': 1, 'phylum': 'Proteobacteria', 'value': 1638},\n",
+    "                    {'patient': 1, 'phylum': 'Actinobacteria', 'value': 569},\n",
+    "                    {'patient': 1, 'phylum': 'Bacteroidetes', 'value': 115},\n",
+    "                    {'patient': 2, 'phylum': 'Firmicutes', 'value': 433},\n",
+    "                    {'patient': 2, 'phylum': 'Proteobacteria', 'value': 1130},\n",
+    "                    {'patient': 2, 'phylum': 'Actinobacteria', 'value': 754},\n",
+    "                    {'patient': 2, 'phylum': 'Bacteroidetes', 'value': 555}])"
+   ]
   },
   {
    "cell_type": "code",
