--- a/assignments/Assignment_2/Assignment_2.ipynb
+++ b/assignments/Assignment_2/Assignment_2.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "for col in df.columns:\n",
     "    if col[:2]=='01':\n",
-    "        df.rename(columns={col:col}, inplace=True)\n",
+    "        df.rename(columns={col:'Gold'+col[4:]}, inplace=True)\n",
     "    if col[:2]=='02':\n",
     "        df.rename(columns={col:'Silver'+col[4:]}, inplace=True)\n",
     "    if col[:2]=='03':\n",
