corrected windstats exercise

--- a/exercises/windstats/windstats_solutions.ipynb
+++ b/exercises/windstats/windstats_solutions.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,37 +612,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "RPT     6\n",
-       "VAL     9\n",
-       "ROS    10\n",
-       "KIL     7\n",
-       "SHA    10\n",
-       "BIR    12\n",
-       "DUB     9\n",
-       "CLA    10\n",
-       "MUL     9\n",
-       "CLO    11\n",
-       "BEL    12\n",
-       "MAL     8\n",
+       "Yr_Mo_Dy    6574\n",
+       "RPT         6568\n",
+       "VAL         6571\n",
+       "ROS         6572\n",
+       "KIL         6569\n",
+       "SHA         6572\n",
+       "BIR         6574\n",
+       "DUB         6571\n",
+       "CLA         6572\n",
+       "MUL         6571\n",
+       "CLO         6573\n",
+       "BEL         6574\n",
+       "MAL         6570\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# number of columns minus the number of missing values for each location\n",
-    "data.shape[1] - data.isnull().sum()"
+    "data.shape[0] - data.isnull().sum()\n",
+    "# or \n",
+    "# data.notnull().sum()"
    ]
   },
   {
@@ -4738,7 +4741,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
